--- a/css/style.css
+++ b/css/style.css
@@ -556,11 +556,13 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-thumb {
-  position: relative;
+.card-set > .item:hover,
+.card-set > .item:focus {
+  box-shadow: var(--card-shadow);
 }
 
 .card-thumb {
+  position: relative;
   overflow: hidden;
 }
 
@@ -569,7 +571,6 @@ img {
   top: 0;
   left: 0;
 
-  /* content: ''; */
   width: 100%;
   height: 100%;
   background-color: var(--accent-color);
@@ -620,11 +621,6 @@ img {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
-}
-
-.card-set .item:hover,
-.card-set .item:focus {
-  box-shadow: var(--card-shadow);
 }
 
 .backdrop {
