--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ img {
 
 .current::after {
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   content: '';
   display: block;
   height: 4px;
@@ -159,6 +159,7 @@ img {
   font-weight: 500;
   line-height: 1.15;
   letter-spacing: 0.02em;
+  white-space: nowrap;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
