--- a/css/style.css
+++ b/css/style.css
@@ -132,10 +132,10 @@ img {
 .current::after {
   position: absolute;
   bottom: -1px;
-  content: '';
-  display: block;
-  height: 4px;
+  left: 0;
   width: 100%;
+  content: '';
+  height: 4px;
   background-color: var(--accent-color);
   border-radius: 2px;
 }
@@ -469,6 +469,7 @@ img {
 .foot-address {
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 
 .connect-cont {
@@ -499,6 +500,62 @@ img {
   outline: none;
 }
 
+.foot-form {
+  margin-left: 93px;
+}
+
+.appeal {
+  color: var(--white-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.17;
+  text-transform: uppercase;
+}
+
+.foot-box {
+  display: flex;
+  margin-top: 20px;
+}
+
+.foot-input {
+  display: block;
+  width: 358px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+
+  background-color: transparent;
+  color: var(--white-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+}
+
+.foot-btn {
+  display: flex;
+  margin-left: 12px;
+
+  align-items: center;
+  padding: 10px 28px;
+  border: none;
+  border-radius: 4px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+}
+
+.foot-svg {
+  margin-left: 10px;
+  fill: var(--white-color);
+}
+
 /* Страница "Портфолио" */
 .card-section {
   padding-top: 94px;
@@ -517,7 +574,7 @@ img {
 
 .btn {
   padding: 6px 22px;
-  border: transparent;
+  border: none;
   border-radius: 4px;
 
   color: var(--primary-text-color);
@@ -654,6 +711,7 @@ img {
   top: 50%;
   left: 50%;
 
+  padding: 40px;
   min-width: 528px;
   min-height: 581px;
 
@@ -685,4 +743,103 @@ img {
 .close-btn:hover,
 .close-btn:focus {
   fill: var(--accent-color);
+}
+
+.modal-form {
+  width: 448px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.modal-form .paragraph {
+  margin: 0;
+  margin-bottom: 12px;
+
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.form-field label {
+  margin-bottom: 4px;
+
+  color: var(--secondary-text-color);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+}
+
+.form-field input {
+  padding: 11px 12px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+textarea {
+  resize: none;
+  padding: 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+
+.form-field textarea::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+}
+
+.form-policy {
+  display: inline-flex;
+  align-items: center;
+  margin-top: 20px;
+  outline: 1px solid red;
+}
+
+.form-policy label {
+  margin-left: 10px;
+  color: var(--secondary-text-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.form-policy a {
+  color: var(--accent-color);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  text-decoration: underline;
+}
+
+.modal-btn {
+  display: block;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 55px;
+  border: none;
+  border-radius: 4px;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--white-color);
+  background-color: var(--accent-color);
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
 }
