--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,6 @@ img {
 .team-box:focus {
   background-color: var(--accent-color);
   fill: var(--white-color);
-  outline: none;
 }
 
 /* Секция "Постоянные клиенты" */
@@ -421,7 +420,6 @@ img {
 .client-box:focus {
   border-color: var(--accent-color);
   fill: var(--accent-color);
-  outline: none;
 }
 
 /* Подвал */
@@ -497,7 +495,6 @@ img {
 .connect-box:hover,
 .connect-box:focus {
   background-color: var(--accent-color);
-  outline: none;
 }
 
 .foot-form {
@@ -595,7 +592,6 @@ img {
   color: var(--white-color);
   background-color: var(--accent-color);
   box-shadow: var(--btn-shadow);
-  outline: none;
 }
 
 .card-set {
@@ -631,7 +627,7 @@ img {
 
   width: 100%;
   height: 100%;
-  background-color: var(--accent-color);
+  background-color: rgba(33, 150, 243, 0.9);
 
   opacity: 0;
   transform: translateY(100%);
@@ -649,7 +645,8 @@ img {
   line-height: 1.55;
 }
 
-.card:hover .card-overley {
+.card:hover .card-overley,
+.card:focus .card-overley {
   transform: translateY(0);
   opacity: 1;
 }
@@ -763,12 +760,13 @@ img {
 }
 
 .form-field {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin-top: 10px;
 }
 
-.form-field label {
+.form-field span {
   margin-bottom: 4px;
 
   color: var(--secondary-text-color);
@@ -779,9 +777,29 @@ img {
 }
 
 .form-field input {
-  padding: 11px 12px;
+  padding: 11px 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-svg {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  fill: var(--primary-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field:focus-within input,
+.form-field:focus-within textarea {
+  border-color: var(--accent-color);
+  outline: none;
+  cursor: pointer;
+}
+
+.form-field:focus-within .form-svg {
+  fill: var(--accent-color);
 }
 
 textarea {
@@ -789,6 +807,7 @@ textarea {
   padding: 16px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field textarea::placeholder {
@@ -807,7 +826,7 @@ textarea {
   width: 100%;
 }
 
-.form-policy label {
+.form-policy span {
   margin-left: 10px;
   color: var(--secondary-text-color);
   font-weight: 400;
