Добавляет cursor pointer в модальном окне

--- a/css/style.css
+++ b/css/style.css
@@ -802,6 +802,10 @@ img {
   fill: var(--accent-color);
 }
 
+.form-field:hover input {
+  cursor: pointer;
+}
+
 textarea {
   resize: none;
   padding: 16px;
