--- a/css/style.css
+++ b/css/style.css
@@ -791,19 +791,20 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-field:hover input,
+.form-field:hover textarea {
+  cursor: pointer;
+}
+
 .form-field:focus-within input,
 .form-field:focus-within textarea {
   border-color: var(--accent-color);
   outline: none;
-  cursor: pointer;
+  cursor: text;
 }
 
 .form-field:focus-within .form-svg {
   fill: var(--accent-color);
-}
-
-.form-field:hover input {
-  cursor: pointer;
 }
 
 textarea {
