--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,8 @@ img {
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-btn:hover {
@@ -551,6 +553,8 @@ img {
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .foot-btn:hover {
@@ -910,6 +914,8 @@ textarea {
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover {
