--- a/css/style.css
+++ b/css/style.css
@@ -623,8 +623,12 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.card-set > .item:hover,
-.card-set > .item:focus {
+.card {
+  display: block;
+}
+
+.card:hover,
+.card:focus {
   box-shadow: var(--card-shadow);
 }
 
